[gd_scene load_steps=31 format=2]

[ext_resource path="res://dat/sprites/Pixel-Platformer/Characters/character_0000.png" type="Texture" id=1]
[ext_resource path="res://dat/sprites/Pixel-Platformer/Characters/character_0001.png" type="Texture" id=2]
[ext_resource path="res://src/player/Player.gd" type="Script" id=3]
[ext_resource path="res://dat/sound/player/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://dat/sound/player/jump2.wav" type="AudioStream" id=5]
[ext_resource path="res://dat/sound/player/hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://dat/sound/player/step.wav" type="AudioStream" id=7]
[ext_resource path="res://dat/UI/fonts/Kenny/Kenney Blocks.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://src/player/HUD.gd" type="Script" id=9]
[ext_resource path="res://dat/UI/hearts/NoHearts.png" type="Texture" id=10]
[ext_resource path="res://dat/UI/hearts/FullHearts.png" type="Texture" id=11]
[ext_resource path="res://src/player/GameOver.gd" type="Script" id=12]
[ext_resource path="res://dat/sound/player/killed.wav" type="AudioStream" id=13]

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform float flash_mod : hint_range(0.0, 1.0) = 0.0;

void fragment(){
	vec4 color = texture(TEXTURE, UV);
	vec3 flash_color = vec3(1.0, 1.0, 1.0);
	
	color.rgb = mix(color.rgb, flash_color, flash_mod);
	
	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/flash_mod = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 20 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sound/Step:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:material:shader_param/flash_mod")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_toggle_step"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sound/Step:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.87298, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.5
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 75.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 6 )

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 0, 0, 1, 0.689453, 0, 0, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.531915, 100 ), 652.592, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="Curve" id=13]
max_value = 1.25
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0255319, 1.25 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.54442, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
lifetime_randomness = 0.25
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 256.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_curve = SubResource( 12 )
scale = 2.0
scale_curve = SubResource( 14 )
color_ramp = SubResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 8 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 17 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/jump = SubResource( 7 )
anims/move = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Effects" type="Node2D" parent="."]

[node name="Jump" type="Particles2D" parent="Effects"]
position = Vector2( 0, 24 )
emitting = false
amount = 32
lifetime = 0.25
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 4 )

[node name="Death" type="Particles2D" parent="Effects"]
emitting = false
amount = 128
lifetime = 15.0
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 15 )

[node name="Sound" type="Node2D" parent="."]

[node name="Jump1" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 4 )
bus = "Player"

[node name="Jump2" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 5 )
bus = "Player"

[node name="Hurt" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 6 )
bus = "Player"

[node name="Step" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 7 )

[node name="Death" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 13 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="ValuableCounter" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 14.0
grow_horizontal = 0
custom_fonts/font = SubResource( 8 )
text = "Coins: 0
Gems: 0"

[node name="HealthBar" type="TextureProgress" parent="HUD"]
margin_right = 54.0
margin_bottom = 18.0
rect_scale = Vector2( 4, 4 )
max_value = 6.0
value = 6.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 11 )

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 12 )

[node name="BG" type="ColorRect" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="Retry" type="Button" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -92.0
margin_right = 192.0
margin_bottom = -28.0
mouse_filter = 2
text = "Retry"

[node name="Quit" type="Button" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = 28.0
margin_right = 192.0
margin_bottom = 92.0
mouse_filter = 2
text = "Quit to menu"

[connection signal="pressed" from="GameOver/Retry" to="GameOver" method="_on_Retry_pressed"]
[connection signal="pressed" from="GameOver/Quit" to="GameOver" method="_on_Quit_pressed"]
